# maga

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: config.hpp  connection.hpp  error.hpp  header.hpp  mimes.hpp  parser.hpp  response.hpp  server.hpp
includes/: connection.hpp  error.hpp  server.hpp
src/: connection.cpp  header.cpp  parser.cpp  server.cpp
static/: index.html
test/: a.out  sample_tcp_client.cpp
